--- a/3.2+Anchor+Elements/3.2 Anchor Elements/index.html
+++ b/3.2+Anchor+Elements/3.2 Anchor Elements/index.html
@@ -1,4 +1,12 @@
-<h1>My top 5 Favourite Websites</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>My top 5 Favourite Websites</h1>
 <!-- Write your code below -->
  <ol>
     <li><a href="#">Product Hunt</a></li>
@@ -7,3 +15,5 @@
     <li><a href="#">Hacker Typer</a></li>
     <li><a href="#">Stellarium</a></li>
  </ol>
+</body>
+</html>
