html portfolio site

--- a/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
+++ b/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
@@ -13,3 +13,24 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Iyke's Portfolio</h1>
+    <h2>I'm a web Developer</h2>
+    <hr />
+
+    <h3>My Projects</h3>
+    <a href="./public/my-movie-ranking.html"><h4>Project 1: Movie Ranking</h4></a>
+    <img src="./assets/images/movie-ranking.png" height="200" alt="Movie Ranking Project Preview" />
+    <br /><br />
+    <a href="./public/my-birthday-invite.html"><h4>Project 2: My birthday invite</h4></a>
+    <img src="./assets/images/birthday-invite.png" height="200" alt="Birthday Invite Project Preview" />
+</body>
+</html>
