--- a/6.3+CSS+Box+Model/6.3 CSS Box Model/index.html
+++ b/6.3+CSS+Box+Model/6.3 CSS Box Model/index.html
@@ -6,15 +6,47 @@
   <title>CSS Box Model</title>
   <style>
     /* Write your CSS code here */
+    .box {
+      width: 200px;
+      height: 200px;
 
+    }
+
+    #box1 {
+      background-color: cadetblue;
+      padding: 20px;
+      border: 10px solid black;
+
+    }
+
+    #box2 {
+      background-color: gold;
+      border: solid black;
+      border-width: 20px 10px;
+      margin-left: 260px;
+    }
+
+    #box3 {
+      background-color: indianred;
+      border: 10px solid;
+      margin-left: 40px;
+    }
   </style>
 </head>
 
 <body>
 
+  <div class="box" id="box1">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed nemo sint culpa architecto
+      nisi, error, quidem veritatis sapiente rerum deleniti consequuntur dolore debitis cupiditate illum maiores
+      perferendis non nihil deserunt.</p>
+  </div>
+  <div class="box" id="box2"></div>
+  <div class="box" id="box3"></div>
 
   <!-- TODOs:
 1. Create 3 Boxes using the div element.
+
 2. Set their sizes to 200px heigh by 200px wide.
 3. Set different background colors for each of the boxes (I used cadetblue, gold and indianred).
 4. Add a paragraph <p> element into the first div and add the following words:
