priicing table project

--- a/9.4+Flexbox+Pricing+Table+Project/index.html
+++ b/9.4+Flexbox+Pricing+Table+Project/index.html
@@ -26,6 +26,7 @@
       border-radius: 5px;
       max-width: 400px;
       padding: 20px;
+      margin: 20px;
     }
 
     .plan-title {
@@ -54,6 +55,7 @@
     @media (max-width: 1250px) {
       .pricing-container {
         flex-direction: column;
+        height: 100%;
       }
     }
   </style>
