intermediate javascript dom manipulation

--- a/DOM/DOM+Challenge+Starting+Files/DOM Challenge Starting Files/index.html
+++ b/DOM/DOM+Challenge+Starting+Files/DOM Challenge Starting Files/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
 
@@ -10,9 +11,10 @@
 
     <h1>Hello</h1>
 
-    <input type="checkbox">
+    <label for="myCheckbox">Accept Terms</label>
+    <input type="checkbox" id="myCheckbox">
 
-    <button style=":active color:red;">Click Me</button>
+    <button id="myButton">Click Me</button>
 
     <ul>
       <li class="list">
