--- a/index.html
+++ b/index.html
@@ -1,29 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
-        .container {
-            display: grid;  
-            grid-template-columns: 1fr 2fr;
-            grid-template-rows: 1fr 1fr;
-            gap: 10px;
+        html {
+            background-color: black;
         }
-
-        .container p {
-            background-color: aqua;
-        }
-
     </style>
 </head>
+
 <body>
-    <div class="container">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum nemo aliquid cumque reiciendis architecto optio. Similique molestiae nesciunt obcaecati. Commodi!</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis illo maxime consequatur nostrum, est animi labore sint eveniet. Exercitationem perspiciatis corrupti ea omnis cum sit, temporibus facere illum libero autem id adipisci totam deserunt aut quisquam odio voluptatum accusamus! Minus.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum maxime non voluptatibus placeat harum praesentium accusamus odio itaque ad officiis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nemo reprehenderit molestias. Adipisci veritatis quos modi temporibus distinctio maiores nam? Velit iure iusto tempora quaerat ipsa magnam voluptatem accusantium sed fugit eum libero, perferendis nesciunt soluta suscipit eaque quidem eligendi!</p>
+    <nav class="flex flex-row z-50 fixed top-4 nav-bar items-center w-full justify-center">
+        <div
+            class="flex chillax font-medium bg-white/80 backdrop-blur-xs border border-white/30 rounded-3xl px-8 py-3 lg:text-lg md:text-sm text-[14.5px] items-center gap-6 lg:gap-10">
+            <a aria-current="page" class="hover:text-black transition-colors text-black" href="/"
+                data-discover="true">Work</a><a class="hover:text-black transition-colors text-black" href="/about"
+                data-discover="true">About</a><a class="hover:text-black transition-colors text-black" href="/notes"
+                data-discover="true">Notes</a><button
+                class="text-black hover:text-black transition-colors cursor-pointer bg-transparent border-none p-0 font-medium">Contact</button>
+        </div>
+    </nav>
+
+
+
+    <div class="flex items-center justify-center lg:justify-between h-24 lg:max-[90%] lg:max-w-7xl md:mx-auto "><a
+            href="/">
+            <div class="hidden lg:block">
+                <h1 class="text-2xl font-bold text-[#0a0f1f] dark:text-white">JOHNEY</h1>
+            </div>
+        </a>
+        <div
+            class="flex h-[58px] items-center gap-6 md:gap-2 rounded-2xl bg-white/80 dark:bg-black/50 px-2 border border-black/10 dark:border-white/10 backdrop-blur-lg">
+            <div class="flex aspect-square items-center justify-center rounded-full md:mx-4" style="width: 36px;"><a
+                    href="#" class="flex h-full w-full items-center justify-center"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="h-full w-full p-2 text-zinc-700 dark:text-zinc-300">
+                        <path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                        <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                    </svg></a></div>
+            <div class="flex aspect-square items-center justify-center rounded-full md:mx-4" style="width: 36px;"><a
+                    href="https://github.com/Kingjohneycodey"
+                    class="flex h-full w-full items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg"
+                        width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round"
+                        class="h-full w-full p-2 text-zinc-700 dark:text-zinc-300">
+                        <path
+                            d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35.0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35.0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4">
+                        </path>
+                        <path d="M9 18c-4.51 2-5-2-7-2"></path>
+                    </svg></a></div>
+            <div class="flex aspect-square items-center justify-center rounded-full md:mx-4" style="width: 36px;"><a
+                    href="https://www.linkedin.com/in/ahiakwojohn"
+                    class="flex h-full w-full items-center justify-center"><svg
+                        class="size-6 transition-transform duration-200 hover:scale-110 h-full w-full p-2 text-zinc-700 dark:text-zinc-300"
+                        xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+                        <path fill="currentColor"
+                            d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z">
+                        </path>
+                    </svg></a></div>
+            <div class="flex aspect-square items-center justify-center rounded-full md:mx-4" style="width: 36px;"><a
+                    href="https://x.com/kingjohney_dev" class="flex h-full w-full items-center justify-center"><svg
+                        class="size-6 transition-transform duration-200 hover:scale-110 h-full w-full p-2 text-zinc-700 dark:text-zinc-300"
+                        xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+                        <path fill="currentColor"
+                            d="M10.488 14.651L15.25 21h7l-7.858-10.478L20.93 3h-2.65l-5.117 5.886L8.75 3h-7l7.51 10.015L2.32 21h2.65zM16.25 19L5.75 5h2l10.5 14z">
+                        </path>
+                    </svg></a></div>
+            <div class="flex aspect-square items-center justify-center rounded-full md:mx-4" style="width: 36px;"><a
+                    href="mailto:kvngjohnny10@gmail.com" class="flex h-full w-full items-center justify-center"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="h-full w-full p-2 text-zinc-700 dark:text-zinc-300">
+                        <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+                        <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+                    </svg></a></div>
+            <div class="flex aspect-square items-center justify-center rounded-full md:mx-4" style="width: 36px;"><a
+                    href="#" class="flex h-full w-full items-center justify-center">
+                    <div><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="h-full w-full p-2 text-zinc-700 dark:text-zinc-300">
+                            <circle cx="12" cy="12" r="5"></circle>
+                            <path d="M12 1v2"></path>
+                            <path d="M12 21v2"></path>
+                            <path d="M4.22 4.22l1.42 1.42"></path>
+                            <path d="M18.36 18.36l1.42 1.42"></path>
+                            <path d="M1 12h2"></path>
+                            <path d="M21 12h2"></path>
+                            <path d="M4.22 19.78l1.42-1.42"></path>
+                            <path d="M18.36 5.64l1.42-1.42"></path>
+                        </svg></div>
+                </a></div>
+        </div>
+        <div class="hidden lg:block"><a
+                class="btn btn-light px-5 py-2.5 text-sm font-medium text-gray-900 dark:text-white flex items-center gap-2 border border-slate-200 dark:border-slate-700 rounded-lg transition-colors hover:bg-slate-900 hover:text-white dark:hover:bg-slate-100 dark:hover:text-black"
+                href="#contact">Contact Me <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                    viewBox="0 0 24 24" fill="currentColor">
+                    <path
+                        d="M14.449 13.5h-13.449v-3h13.449l-4.449-4.449 2.121-2.121 7.879 7.879-7.879 7.879-2.121-2.121z">
+                    </path>
+                </svg></a></div>
     </div>
 </body>
+
 </html>
