--- a/jquery/index.html
+++ b/jquery/index.html
@@ -9,6 +9,7 @@
 <body>
 
    <h1>Hi my name is iyke</h1>
+   <h2>Hover over me</h2>
    <a href="https://google.com">Google</a>
    <button>click us</button>
    <button>click us</button>
